Display emulator and Play Protect warnings if those new checks find problems. Target SDK upgraded to 30 Case standardization for ENUMs. Added support to enable and disable emulator and Play Protect rules. Check error if biometrics has been invalidated by change and prompt to configure again.